--- a/css/tabs.styl
+++ b/css/tabs.styl
@@ -38,7 +38,7 @@ tabs
     cursor: initial
 
     img
-      width:70%
+      width:65%
 
 .crowdstart-tab-padding
   width: 100%
